Fix disabled tags not hiding on mobile
The tags user choose to hide were not hidden with mobile mediaqueries.

--- a/shared-data/default-theme/css/default.css
+++ b/shared-data/default-theme/css/default.css
@@ -9684,7 +9684,7 @@ a.modal-tag-color-option:hover {
   }
   #sidebar-lists ul,
   #sidebar a.sidebar-tag,
-  #sidebar-lists ul li {
+  #sidebar-lists ul li:not(.hide) {
     display: inline-block;
     text-align: center;
     vertical-align: top;
