--- a/shared-data/default-theme/less/app/mobile.less
+++ b/shared-data/default-theme/less/app/mobile.less
@@ -105,7 +105,7 @@
   #sidebar-bottom { display: none; }
   #sidebar-lists ul,
   #sidebar a.sidebar-tag,
-  #sidebar-lists ul li {
+  #sidebar-lists ul li:not(.hide) {
     display: inline-block;
     text-align: center; vertical-align: top;
     padding: 0; margin: 0;
